# PersonalFinanceManagementService

./: docker-compose.yml  pyproject.toml
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_02_23_1625-35b7525b68b6_category_and_transaction_tables.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  finance_router.py
src/api/dependencies/: services.py
src/core/: config.py
src/core/entities/: __init__.py  category.py  transaction.py
src/core/repositories/: __init__.py
src/core/repositories/category/: abstract_category_repository.py  dto.py
src/core/repositories/transaction/: abstract_transaction_repository.py  dto.py
src/core/services/: __init__.py  category_service.py  transaction_service.py
src/infrastructure/: config.py
src/infrastructure/db/: __init__.py  db_helper.py
src/infrastructure/db/mappers/: category_mapper.py
src/infrastructure/db/models/: base.py  category.py  transaction.py
src/infrastructure/db/repository/: sqlalchemy_category_repository.py
